Changes in 1.13
* fixed error in the routine for multiple expt per env
* summary.var has new option for separate.loc

Changes in 1.12
* GWAS "DM" option modified so that now only the random effect is standardized. The effect itself still includes the fixed (heterosis) portion.

Changes in 1.11
* dominance function is now scaled to population, not just var component

Changes in 1.10
* Added support for multi-population/multi-ploidy analysis
* Fixed error in Stage1 related to multiple experiments per env

Changes in 1.09
* changed read.csv to fread in read_geno

Changes in 1.08
* summary.var and dominance functions now work for multi-trait

Changes in 1.07
* coerce_dpo updated to account for changes to the Matrix package

Changes in 1.06
* Duplicate values removed from pheno2.csv, updated Vignette2
* max.iter option in Stage1

Changes in 1.05
* Added function remove_spatialtrend

Changes in 1.04
* Added desired gains index option
* Changed name of argument "coeff" to "merit" in gain function
* Fixed error for multi-trait + multi-expt/env option in Stage1
* Pairwise option for multiple traits in Stage2
* Updated Vignette3

Changes in 1.03
* predict.geno allows marker effects model to be subset of geno variable

Changes in 1.02
* Handles positive semi-definite D matrix
* Additive covariates allowed in Stage2

Changes in 1.01
* Eliminated "fixed" output from Stage2, replaced with "params"
* New function "dominance" for reporting dominance parameters 

Changes in 1.00
* fixed bug in blup for AM/DM when using list of blup_prep inputs

Changes in 0.95
* corrected missing heterosis in dominance marker effect blups

Changes in 0.94
* Changed dgeMatrix call due to Matrix package update

Changes in 0.93
* Fixed bug encountered with missing environment and multiple traits

Changes in 0.92
* Added max.iter argument to Stage2, to control maximum number of ASReml-R iterations.
* Upon lack of convergence, Stage2 now terminates instead of prompting user.

Changes in 0.91